--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "students",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/David-Hoang/students#readme",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "chalk": "^5.4.1"
   }
 }
